--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,8 +25,7 @@ body {
   z-index: 50;
   top: 0;
   left: 0;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.95);
+  background-color: var(--background);
   overflow-y: hidden;
   transition: 0.5s;
 }
