--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
     --primary: #853BFF;
     --primary-foreground: #FFFFFF;
     --secondary: #B89D19;
+    --footer:#C9C8C4;
   }
 }
 
@@ -17,6 +18,3 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-
-
