--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,16 @@
     --footer:#C9C8C4;
   }
 }
-
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 body {
   color: var(--foreground);
   background: var(--background);
