--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--secondary)
 }
-
+/* For not found page */
 .stars {
   position: fixed;
   top: 0;
@@ -71,3 +71,5 @@ body {
     transform: scale(1);
   }
 }
+
+/* For not found page */
