--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@ body {
     radial-gradient(2px 2px at 160px 120px, var(--primary), rgba(0,0,0,0));
   background-repeat: repeat;
   background-size: 200px 200px;
-  animation: zoom 5s infinite;
+  animation: zoom 3s infinite;
   opacity: 0.5;
 }
 
@@ -79,3 +79,7 @@ a, button, [role="button"] {
   cursor: none !important;
 }
 
+/* For disabling page scroll while navbar is opened */
+.overflow-hidden {
+  overflow: hidden;
+}
